--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="jumbotron">
                 <h1>TTBS</h1>
-                <h2>一生二 二生三 三生万物</h2>
+                <h2>一生二 二生三 三生万物 诸佛召见</h2>
                 <hr>
                 <div>
                     <div class="panel-body">
